fixed horitontally jumping content

--- a/makeup/sass/_customStyles.scss
+++ b/makeup/sass/_customStyles.scss
@@ -1,12 +1,24 @@
 /**** Begin: App header ****/
+
+// Hack to fix horizontally jumping content when scrollbar appears.
+html {
+  margin-right: calc(-100vw + 100%);
+  overflow-x: hidden;
+}
+body {
+  overflow-x: auto;
+}
+
 .jumbotron {
   background-image: url("../img/jumbotron_bg_1920.jpg");
   background-size: cover;
   border-radius: 0px;
 }
+
 a {
   cursor: pointer;
 }
+
 /**** End: App header ****/
 
 /**** Begin: Login page variant ****/
@@ -14,9 +26,11 @@ a {
   width: 100%;
   max-width: 330px;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
@@ -24,34 +38,42 @@ a {
   padding: 10px;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin > input[class="form-control first"] {
+
+.form-signin>input[class="form-control first"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin > input[class="form-control"] {
+
+.form-signin>input[class="form-control"] {
   margin-top: -1px;
   margin-bottom: -1px;
   border-radius: 0;
 }
+
 .form-signin input[class="form-control last"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
 /**** End: Login page variant ****/
 
 /**** Begin: SampleData ****/
-.anim {  
+.anim {
   transition: background 2s linear;
 }
+
 .highlight {
-  background: #ffefaa; 
+  background: #ffefaa;
 }
-.normal {  
-  background: transparent;  
+
+.normal {
+  background: transparent;
 }
+
 /**** End: SampleData ****/
